Closing in on RevC design

--- a/pcb/TODO
+++ b/pcb/TODO
@@ -1,9 +1,10 @@
 RevC:
--double check silkscreen labels
--lengthen accelerometer pads
+x-double check silkscreen labels
+x-move USB connector in, to be flush with board
+x-fix uneven lanyard hole
+x-fix uneven LED spacing
+x-reduce pcb cutout under power switch
+x-add on/off marker
+x-lengthen accelerometer pads
 -lengthen transistor pads
--fix uneven LED spacing
--reduce pcb cutout under power switch
--fix uneven lanyard hole
--move USB connector in, to be flush with board
--add on/off marker
+-fix outline for battery connector
